--- a/00-solution/do/csharp/Pulumi.yaml
+++ b/00-solution/do/csharp/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: 00-solution
-runtime: python
+name: 00-solution-do-csharp
+runtime: dotnet
 description: A minimal DigitalOcean Pulumi YAML program
