--- a/00-solution/do/python/Pulumi.yaml
+++ b/00-solution/do/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: 00-solution
-runtime: dotnet
+name: 00-solution-do-python
+runtime: python
 description: A minimal DigitalOcean Pulumi YAML program
