--- a/00-solution/do/typescript/Pulumi.yaml
+++ b/00-solution/do/typescript/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: 00-solution
-runtime: java
+name: 00-solution-do-typescript
+runtime: nodejs
 description: A minimal DigitalOcean Pulumi YAML program
